--- a/src/app/header/components/global-header-bar/mobile-navigation/mobile-navigation.component.scss
+++ b/src/app/header/components/global-header-bar/mobile-navigation/mobile-navigation.component.scss
@@ -1,4 +1,10 @@
 @import "material/common/colors";
 :host {
-    background: transparentize($dark-blue, 0.6);
+    background: $dark-blue;
+    position: relative;
+}
+.navigation-toggle{
+    md-icon{
+
+    }
 }
